--- a/Fchanger.html
+++ b/Fchanger.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Font ChangerS</title>
-    <!-- <link rel="stylesheet" href="styles (1).css"> -->
+    <link rel="stylesheet" href="styles.css">
     <style>
     .Input-box {
       position: relative;
